--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: #c1363f;
+    background-color: #7e36c1;
     text-align: center;
 }
 .container{
@@ -28,14 +28,23 @@ body{
 .box{
     height: 18vmin;
     width: 18vmin;
-    border-radius: 1rem;
+    border-radius: 3rem;
     border: none;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
     font-size: 10vmin;
-    color: #b0413e;
-    background-color: #6186d7;
+    color: #3e9fb0;
+    background-color: #606f8b;
 }
 #btn{
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: #191913;
+    color: #fff;
+    border-radius: 1rem;
+    border: none;
+    margin-bottom: 40px;
+}
+#backbtn{
     padding: 1rem;
     font-size: 1.5rem;
     background-color: #191913;
